# LOOP

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  checker.sh  main.cpp
Game/: Game.cpp  Game.hpp
Game/Characters/Angels/: Angel.cpp  Angel.hpp
Game/Characters/Attributes/: Coords.cpp  Coords.hpp  Effects.cpp  Effects.hpp  Stats.cpp  Stats.hpp  Strategy.cpp  Strategy.hpp
Game/Characters/Heroes/: Ability.cpp  Ability.hpp  Hero.cpp  Hero.hpp  HeroFactory.cpp  HeroFactory.hpp
Game/Characters/Heroes/Knight/: Execute.cpp  Execute.hpp  Knight.cpp  Knight.hpp  Slam.cpp  Slam.hpp
Game/Characters/Heroes/Pyromancer/: Fireblast.cpp  Fireblast.hpp  Ignite.cpp  Ignite.hpp  Pyromancer.cpp  Pyromancer.hpp
Game/Characters/Heroes/Rogue/: Backstab.cpp  Backstab.hpp  Paralysis.cpp  Paralysis.hpp  Rogue.cpp  Rogue.hpp
Game/Characters/Heroes/Wizard/: Deflect.cpp  Deflect.hpp  Drain.cpp  Drain.hpp  Wizard.cpp  Wizard.hpp
Game/Map/: Map.cpp  Map.hpp
